added welcome, login, and register screen.  created basic navigation between them.  also added logout to the overflow menu and sent the logout onClick to the welcome screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="players_list">Players List!</string>
 
     <string name="this_isn_t_the_page_you_re_looking_for">This isn\'t the page you\'re looking for.  A view has most likely not been created for this link yet.</string>
+    <string name="logout">Logout</string>
 
 </resources>
